# atsam-pac

./: .gitignore  Cargo.toml  README.md  pactool.sh  update.sh
pac/atsam4e16c/: CHANGELOG.md  Cargo.toml  README.md
pac/atsam4e16c/src/: afec1.rs  crccu.rs  dacc.rs  dmac.rs  gpbr.rs  lib.rs  pioa.rs  piob.rs  pwm.rs  tc0.rs  tc1.rs  tc2.rs  twi0.rs  uart0.rs  uart1.rs  udp.rs  usart0.rs
pac/atsam4e16c/src/acc/: cr.rs  imr.rs  wpsr.rs
pac/atsam4e16c/src/aes/: cr.rs  idatar.rs  imr.rs  isr.rs  keywr.rs  mr.rs
pac/atsam4e16c/src/afec0/: acr.rs  cdr.rs  chsr.rs  cocr.rs  cselr.rs  cvr.rs  imr.rs  mr.rs
pac/atsam4e16c/src/afec1/: acr.rs  cecr.rs  cgr.rs  cocr.rs  cwr.rs  emr.rs  idr.rs  imr.rs  over.rs  tempmr.rs
pac/atsam4e16c/src/can0/: br.rs  idr.rs  ier.rs  mam2.rs  mam4.rs  mcr0.rs  mcr1.rs  mcr2.rs  mcr4.rs  mcr6.rs  mdl1.rs  mdl2.rs  mdl4.rs  mfid4.rs  mmr0.rs  mmr2.rs  mmr3.rs  mmr5.rs  mr.rs  msr3.rs  msr6.rs  msr7.rs  sr.rs  timestp.rs  wpmr.rs  wpsr.rs
pac/atsam4e16c/src/can1/: mmr2.rs  mmr5.rs  mmr7.rs
pac/atsam4e16c/src/chipid/: cidr.rs
pac/atsam4e16c/src/crccu/: idr.rs
pac/atsam4e16c/src/dacc/: cdr.rs  cher.rs  idr.rs  isr.rs  mr.rs  wpmr.rs
pac/atsam4e16c/src/dmac/: cfg1.rs  cfg3.rs  chdr.rs  cher.rs  chsr.rs  ctrla2.rs  ctrla3.rs  ctrlb0.rs  ctrlb1.rs  ctrlb2.rs  daddr0.rs  daddr2.rs  dscr0.rs  dscr2.rs  ebcier.rs  ebcimr.rs  ebcisr.rs  gcfg.rs  sreq.rs
pac/atsam4e16c/src/gmac/: efts.rs  imr.rs  ncr.rs  nsr.rs  pefrs.rs  rbqb.rs  sab1.rs  sab3.rs  sab4.rs  sat2.rs  ta.rs  tidm.rs  ufr.rs  ur.rs
pac/atsam4e16c/src/hsmci/: cmdr.rs  mr.rs  rspr.rs  tpr.rs  wpmr.rs
pac/atsam4e16c/src/matrix/: matrix_mrcr.rs  matrix_pras0.rs  matrix_pras1.rs  matrix_pras2.rs  matrix_pras4.rs  matrix_scfg.rs  mcfg.rs  pras2.rs  pras8.rs  pras9.rs  prbs13.rs  prbs14.rs  prbs6.rs  sfr.rs  wpmr.rs
pac/atsam4e16c/src/pioa/: ifscdr.rs
pac/atsam4e16c/src/piob/: aimmr.rs  ifscsr.rs  ower.rs  ppdsr.rs
pac/atsam4e16c/src/piod/: fellsr.rs
pac/atsam4e16c/src/pioe/: mder.rs  pcmr.rs  pusr.rs
pac/atsam4e16c/src/pmc/: ckgr_mor.rs  pmc_fsmr.rs  pmc_fspr.rs  pmc_ier.rs  pmc_pcdr0.rs  pmc_pcdr1.rs  pmc_pcer1.rs  pmc_pcsr0.rs  pmc_pcsr1.rs  pmc_sr.rs
pac/atsam4e16c/src/pwm/: cae0.rs  caeupd0.rs  caeupd1.rs  cmpm2.rs  cmpm6.rs  cmpmupd0.rs  cmpmupd2.rs  cmpmupd6.rs  cmpvupd3.rs  cmpvupd4.rs  cmr0.rs  cmr1.rs  cmr2.rs  cmr3.rs  cmupd0.rs  cmupd3.rs  cprd2.rs  dt1.rs  dtupd1.rs  fmr.rs  fpe.rs  fpv1.rs  ier1.rs  oov.rs  scm.rs  scupupd.rs  smmr.rs  sspup.rs
pac/atsam4e16c/src/rstc/: mr.rs
pac/atsam4e16c/src/rswdt/: cr.rs  mr.rs
pac/atsam4e16c/src/rtc/: imr.rs  mr.rs
pac/atsam4e16c/src/smc/: wpsr.rs
pac/atsam4e16c/src/supc/: cr.rs  sr.rs  wumr.rs
pac/atsam4e16c/src/tc0/: cmr0.rs  ier2.rs  imr1.rs  ptcr0.rs  ptsr0.rs  qidr.rs  rncr0.rs  rnpr0.rs  rpr1.rs  smmr1.rs  smmr2.rs  sr1.rs  wpmr.rs
pac/atsam4e16c/src/tc1/: cmr0_wave_eq_1.rs  cmr2.rs  ptcr1.rs
pac/atsam4e16c/src/tc2/: cmr0.rs  cmr1_wave_eq_1.rs
pac/atsam4e16c/src/twi0/: cr.rs  ier.rs  wpmr.rs
pac/atsam4e16c/src/twi1/: thr.rs
pac/atsam4e16c/src/uart0/: mr.rs  wpmr.rs
pac/atsam4e16c/src/uart1/: brgr.rs  mr.rs  rpr.rs
pac/atsam4e16c/src/udp/: csr0_isoendpt.rs  glb_stat.rs  icr.rs  txvc.rs
pac/atsam4e16c/src/usart0/: csr.rs  ier.rs  imr.rs  man.rs  spi_mode_mr_spi_mode.rs  thr.rs
pac/atsam4e16c/src/usart1/: csr.rs  fidi.rs  ier.rs  imr.rs  mr.rs  rcr.rs  spi_mode_mr_spi_mode.rs
pac/atsam4e16c/src/wdt/: cr.rs
pac/atsam4e8c/: CHANGELOG.md  Cargo.toml  README.md  device.x
pac/atsam4e8c/src/: afec1.rs  dmac.rs  gmac.rs  lib.rs  matrix.rs  pioa.rs  pmc.rs  pwm.rs  tc0.rs  twi1.rs  uart1.rs  usart1.rs
pac/atsam4e8c/src/acc/: mr.rs  wpsr.rs
pac/atsam4e8c/src/aes/: idr.rs  isr.rs  ivr.rs  odatar.rs
pac/atsam4ec/: Cargo.toml  device.x
pac/atsam4ec/src/: afec1.rs  lib.rs  pmc.rs
pac/atsam4ls4a/: Cargo.toml
pac/atsam4ls4a/src/: adcife.rs  lib.rs  trng.rs
pac/atsam4ls4c/: Cargo.toml
pac/atsam4ls4c/src/: acifc.rs  eic.rs  freqm.rs  hcache.rs  lib.rs  scif.rs  twis0.rs
pac/atsam4ls8a/: Cargo.toml
pac/atsam4ls8a/src/: lib.rs  tc0.rs  usbc.rs
pac/atsam4ls8b/: Cargo.toml
pac/atsam4ls8b/src/: bscif.rs  hflashc.rs  hmatrix.rs  lib.rs  scif.rs
pac/atsam4s16b/: CHANGELOG.md  Cargo.toml  device.x
pac/atsam4s16b/src/: lib.rs  piob.rs  pmc.rs  twi0.rs  usart0.rs
pac/atsam4s16c/: CHANGELOG.md  Cargo.toml
pac/atsam4s16c/src/: adc.rs  crccu.rs  lib.rs  spi.rs  tc1.rs  usart1.rs
pac/atsam4s2a/: CHANGELOG.md  Cargo.toml  README.md  device.x
pac/atsam4s2a/src/: lib.rs
pac/atsam4s2c/: Cargo.toml  README.md  device.x
pac/atsam4s2c/src/: adc.rs  dacc.rs  hsmci.rs  lib.rs  spi.rs  ssc.rs
pac/atsam4s4c/: Cargo.toml  README.md
pac/atsam4s4c/src/: efc0.rs  gpbr.rs  lib.rs  pioa.rs  pmc.rs
pac/atsam4s8c/: Cargo.toml  README.md  device.x
pac/atsam4s8c/src/: lib.rs  matrix.rs  rtc.rs  udp.rs  usart0.rs
pac/atsam4sa16b/: Cargo.toml  README.md
pac/atsam4sa16b/src/: cmcc.rs  crccu.rs  lib.rs  pioa.rs  pmc.rs  pwm.rs  ssc.rs  usart1.rs
pac/atsam4sd16b/: CHANGELOG.md  Cargo.toml  README.md  device.x
pac/atsam4sd16b/src/: lib.rs  piob.rs  tc0.rs
pac/atsam4sd32c/: CHANGELOG.md  Cargo.toml  README.md  device.x
pac/atsam4sd32c/atsam4s2a/: Cargo.toml  README.md
pac/atsam4sd32c/src/: lib.rs  piob.rs  pwm.rs  smc.rs  udp.rs
pac/atsame51j19a/: Cargo.toml
pac/atsame51j19a/src/: lib.rs  sdhc0.rs
pac/atsame53n19a/: Cargo.toml
pac/atsame53n19a/src/: gmac.rs  lib.rs  sercom0.rs
pac/atsame54n20a/: Cargo.toml
pac/atsame54n20a/src/: gmac.rs  lib.rs
pac/atsame54p19a/: Cargo.toml
pac/atsame54p19a/src/: lib.rs
pac/atsame70j19/: Cargo.toml
pac/atsame70j19/src/: dacc.rs  icm.rs  lib.rs  lockbit.rs  matrix.rs  xdmac.rs
pac/atsame70n19/: Cargo.toml
pac/atsame70n19/src/: lib.rs  mcan0.rs  rstc.rs  spi0.rs  supc.rs  usbhs.rs  xdmac.rs
pac/atsame70n20/: Cargo.toml
pac/atsame70n20/src/: aes.rs  hsmci.rs  lib.rs  lockbit.rs  matrix.rs  pwm0.rs  supc.rs
pac/atsame70q20b/: Cargo.toml
pac/atsame70q20b/src/: aes.rs  i2sc0.rs  lib.rs  matrix.rs  smc.rs
(+8388 files in other folders)
