[workspace]
members = [
    "pac/atsam4e16c",
    "pac/atsam4e16e",
    "pac/atsam4e8c",
    "pac/atsam4e8e",
    "pac/atsam4s2a",
    "pac/atsam4s2b",
    "pac/atsam4s2c",
    "pac/atsam4s4a",
    "pac/atsam4s4b",
    "pac/atsam4s4c",
    "pac/atsam4s8b",
    "pac/atsam4s8c",
    "pac/atsam4s16b",
    "pac/atsam4s16c",
    "pac/atsam4sa16b",
    "pac/atsam4sa16c",
    "pac/atsam4sd16b",
    "pac/atsam4sd16c",
    "pac/atsam4sd32b",
    "pac/atsam4sd32c",
    "pac/atsame51g18a",
    "pac/atsame51g19a",
    "pac/atsame51j18a",
    "pac/atsame51j19a",
    "pac/atsame51j20a",
    "pac/atsame51n19a",
    "pac/atsame51n20a",
    "pac/atsame53j18a",
    "pac/atsame53j19a",
    "pac/atsame53j20a",
    "pac/atsame53n19a",
    "pac/atsame53n20a",
    "pac/atsame54n19a",
    "pac/atsame54n20a",
    "pac/atsame54p19a",
    "pac/atsame54p20a",
]
