[workspace]
members = [
    "pac/atsam4e16c",
    "pac/atsam4e16e",
    "pac/atsam4e8c",
    "pac/atsam4e8e",
    "pac/atsam4n16b",
    "pac/atsam4n16c",
    "pac/atsam4n8a",
    "pac/atsam4n8b",
    "pac/atsam4n8c",
    "pac/atsam4lc2a",
    "pac/atsam4s2a",
    "pac/atsam4s2b",
    "pac/atsam4s2c",
    "pac/atsam4s4a",
    "pac/atsam4s4b",
    "pac/atsam4s4c",
    "pac/atsam4s8b",
    "pac/atsam4s8c",
    "pac/atsam4s16b",
    "pac/atsam4s16c",
    "pac/atsam4sa16b",
    "pac/atsam4sa16c",
    "pac/atsam4sd16b",
    "pac/atsam4sd16c",
    "pac/atsam4sd32b",
    "pac/atsam4sd32c",
    "pac/atsam4sp32a",
    "pac/atsame51g18a",
    "pac/atsame51g19a",
    "pac/atsame51j18a",
    "pac/atsame51j19a",
    "pac/atsame51j20a",
    "pac/atsame51n19a",
    "pac/atsame51n20a",
    "pac/atsame53j18a",
    "pac/atsame53j19a",
    "pac/atsame53j20a",
    "pac/atsame53n19a",
    "pac/atsame53n20a",
    "pac/atsame54n19a",
    "pac/atsame54n20a",
    "pac/atsame54p19a",
    "pac/atsame54p20a",
    "pac/atsame70j19",
    "pac/atsame70j19b",
    "pac/atsame70j20",
    "pac/atsame70j20b",
    "pac/atsame70j21",
    "pac/atsame70j21b",
    "pac/atsame70n19",
    "pac/atsame70n19b",
    "pac/atsame70n20",
    "pac/atsame70n20b",
    "pac/atsame70n21",
    "pac/atsame70n21b",
    "pac/atsame70q19",
    "pac/atsame70q19b",
    "pac/atsame70q20",
    "pac/atsame70q20b",
    "pac/atsame70q21",
    "pac/atsame70q21b"
]
