[workspace]
members = [
    "pac/atsam4e16c",
    "pac/atsam4e16e",
    "pac/atsam4e8c",
    "pac/atsam4e8e",
    "pac/atsam4n16b",
    "pac/atsam4n16c",
    "pac/atsam4n8a",
    "pac/atsam4n8b",
    "pac/atsam4n8c",
    "pac/atsam4lc2a",
    "pac/atsam4lc2b",
    "pac/atsam4lc2c",
    "pac/atsam4lc4a",
    "pac/atsam4lc4b",
    "pac/atsam4lc4c",
    "pac/atsam4lc8a",
    "pac/atsam4lc8b",
    "pac/atsam4lc8c",
    "pac/atsam4ls2a",
    "pac/atsam4ls2b",
    "pac/atsam4ls2c",
    "pac/atsam4ls4a",
    "pac/atsam4ls4b",
    "pac/atsam4ls4c",
    "pac/atsam4ls8a",
    "pac/atsam4ls8b",
    "pac/atsam4ls8c",
    "pac/atsam4s2a",
    "pac/atsam4s2b",
    "pac/atsam4s2c",
    "pac/atsam4s4a",
    "pac/atsam4s4b",
    "pac/atsam4s4c",
    "pac/atsam4s8b",
    "pac/atsam4s8c",
    "pac/atsam4s16b",
    "pac/atsam4s16c",
    "pac/atsam4sa16b",
    "pac/atsam4sa16c",
    "pac/atsam4sd16b",
    "pac/atsam4sd16c",
    "pac/atsam4sd32b",
    "pac/atsam4sd32c",
    "pac/atsam4sp32a",
]
