[package]
authors = ["John Terrell <john@coolpeoplenetworks.com>", "Jacob Alexander <haata@kiibohd.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for the ATSAM4LS4C microcontroller"
keywords = ["arm", "cortex-m", "atsam4ls4c", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "atsam4ls4c-pac"
repository = "https://github.com/atsam-rs/atsam-pac"
version = "0.2.0"
edition = "2018"

[dependencies]
bare-metal = "1.0.0"
cortex-m = "0.7.3"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.0"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
