[package]
authors = ["John Terrell <john@coolpeoplenetworks.com>", "Jacob Alexander <haata@kiibohd.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for the ATSAM4S16B microcontroller"
keywords = ["arm", "cortex-m", "atsam4s16b", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "atsam4s16b-pac"
repository = "https://github.com/atsam-rs/atsam-pac"
version = "0.3.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.3"

[features]
rt = ["cortex-m-rt/device"]
critical-section = ["dep:critical-section"]

[package.metadata.docs.rs]
features = ["rt"]
