[package]
authors = ["John Terrell <john@coolpeoplenetworks.com>", "Jacob Alexander <haata@kiibohd.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for ATSAM4S4C microcontrollers"
keywords = ["arm", "cortex-m", "atsam4s4c", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "atsam4s4c-pac"
repository = "https://github.com/atsam-rs/atsam-pac"
version = "0.2.1"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.2"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
