[package]
authors = ["John Terrell <john.terrell@outlook.com>", "Jacob Alexander <haata@kiibohd.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for ATSAM4S8C microcontrollers"
keywords = ["arm", "cortex-m", "atsam4s8c", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "atsam4s8c-pac"
repository = "https://github.com/atsam4-rs/atsam4s-pac"
version = "0.1.2"

[dependencies]
bare-metal = "0.2.4"
cortex-m = "0.6.3"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.13"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
