[package]
authors = ["John Terrell <john@coolpeoplenetworks.com>", "Jacob Alexander <haata@kiibohd.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for the ATSAME54N20A microcontroller"
keywords = ["arm", "cortex-m", "atsame54n20a", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "atsame54n20a-pac"
repository = "https://github.com/atsam-rs/atsam-pac"
version = "0.2.1"
edition = "2021"

[dependencies]
bare-metal = "1.0.0"
cortex-m = "0.7.5"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.1"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
