[package]
authors = ["John Terrell <john@coolpeoplenetworks.com>", "Jacob Alexander <haata@kiibohd.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for the ATSAME70J19 microcontroller"
keywords = ["arm", "cortex-m", "atsame70j19", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "atsame70j19-pac"
repository = "https://github.com/atsam-rs/atsam-pac"
version = "0.2.2"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
critical-section = { version = "1.0.0", optional = true }
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.2"

[features]
rt = ["cortex-m-rt/device"]
critical-section = ["dep:critical-section"]

[package.metadata.docs.rs]
features = ["rt"]
