[package]
authors = ["John Terrell <john@coolpeoplenetworks.com>", "Jacob Alexander <haata@kiibohd.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for the ATSAME70N19 microcontroller"
keywords = ["arm", "cortex-m", "atsame70n19", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "atsame70n19-pac"
repository = "https://github.com/atsam-rs/atsam-pac"
version = "0.2.2"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.2"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
